syntax = "proto3";

package user_profile;

import "google/api/annotations.proto";

service UserProfileAPI {
    rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse) {
        option (google.api.http) = {
            post: "/getuserprofile"
            body: "*"
        };
    }

    rpc UpdateUserProfile (UpdateUserProfileRequest) returns (UpdateUserProfileResponse) {
        option (google.api.http) = {
            post: "/updateuserprofile"
            body: "*"
        };
    }
}

message GetUserProfileRequest {
    string email = 1;
}

message GetUserProfileResponse {
    string profileimage = 1;
    string profiledescription = 2;
    repeated string endorsements = 3;
    repeated string currentprojects = 4;
    repeated string previousprojects = 5;
    // project_invites > [project_ids]
}

message UpdateUserProfileRequest {
    string email = 1;
    string profileimage = 2;
    string profiledescription = 3;
    repeated string currentprojects = 4;
    repeated string previousprojects = 5; 
}

message UpdateUserProfileResponse {
    bool success = 1;
}